[gd_scene load_steps=17 format=3 uid="uid://s7tfk4kl1coq"]

[ext_resource type="Script" path="res://Game/Global/Music.gd" id="1_sbsg8"]
[ext_resource type="AudioStream" uid="uid://dj0rtxxnw0877" path="res://Assets/Music/Boss_Music/Stems_Boss1/Boss1Theme.wav" id="3_s3lsq"]
[ext_resource type="AudioStream" uid="uid://de3kuq2q3xvy6" path="res://Assets/Music/Boss_Music/Stems_Boss2/Boss2_Theme.wav" id="4_7r37h"]
[ext_resource type="AudioStream" uid="uid://ctodgt4ktybxh" path="res://Assets/SFX/26. Level Up.wav" id="5_jt3vl"]
[ext_resource type="AudioStream" uid="uid://bdbmdkcsqxo6o" path="res://Assets/Music/StemsLVL2/Level2_Arp1.mp3" id="6_alflw"]
[ext_resource type="AudioStream" uid="uid://q2ehnm4bxvwy" path="res://Assets/Music/StemsLVL2/Level2_Arp2.mp3" id="7_pcr6m"]
[ext_resource type="AudioStream" uid="uid://1acqh2jquyv8" path="res://Assets/Music/Menu Loop/WJ#54_Menu_Music.wav" id="7_ppf5b"]
[ext_resource type="AudioStream" uid="uid://dlxl16oykc10g" path="res://Assets/Music/StemsLVL2/Level2_Bass.mp3" id="8_scw4q"]
[ext_resource type="AudioStream" uid="uid://blyftbvi63iu6" path="res://Assets/Music/StemsLVL2/Level2_Clave.mp3" id="9_gso6i"]
[ext_resource type="AudioStream" uid="uid://cysl70qeqe1dx" path="res://Assets/Music/StemsLVL2/Level2_Conga.mp3" id="10_qqhpu"]
[ext_resource type="AudioStream" uid="uid://bkxslb7v6qi05" path="res://Assets/Music/StemsLVL2/Level2_HiHat.mp3" id="11_neec3"]
[ext_resource type="AudioStream" uid="uid://dhaj1pjvva73w" path="res://Assets/Music/StemsLVL2/Level2_Kick.mp3" id="12_vygng"]
[ext_resource type="AudioStream" uid="uid://cvqrmxk7y3m3f" path="res://Assets/Music/StemsLVL2/Level2_Marimba.mp3" id="13_07nq5"]
[ext_resource type="AudioStream" uid="uid://cvvkq3dhjdj5i" path="res://Assets/Music/StemsLVL2/Level2_Perc.mp3" id="14_toxfv"]
[ext_resource type="AudioStream" uid="uid://dpiiu2jpy77y8" path="res://Assets/Music/StemsLVL2/Level2_Snare.mp3" id="15_qiccn"]
[ext_resource type="AudioStream" uid="uid://btoo22t67m2ub" path="res://Assets/Music/StemsLVL2/Level2_Synth1.mp3" id="16_wpljj"]

[node name="Music" type="Node2D"]
script = ExtResource("1_sbsg8")

[node name="BossMusic1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_s3lsq")
volume_db = -12.0

[node name="BossMusic2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_7r37h")
volume_db = -12.0

[node name="BossMusic3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_7r37h")
volume_db = -12.0

[node name="LevelUpPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_jt3vl")

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_ppf5b")
volume_db = -12.0

[node name="Stems" type="Node" parent="."]

[node name="Arp1" type="AudioStreamPlayer" parent="Stems"]
stream = ExtResource("6_alflw")

[node name="Arp2" type="AudioStreamPlayer" parent="Stems"]
stream = ExtResource("7_pcr6m")

[node name="Bass" type="AudioStreamPlayer" parent="Stems"]
stream = ExtResource("8_scw4q")

[node name="Clave" type="AudioStreamPlayer" parent="Stems"]
stream = ExtResource("9_gso6i")

[node name="Conga" type="AudioStreamPlayer" parent="Stems"]
stream = ExtResource("10_qqhpu")

[node name="HiHat" type="AudioStreamPlayer" parent="Stems"]
stream = ExtResource("11_neec3")

[node name="Kick" type="AudioStreamPlayer" parent="Stems"]
stream = ExtResource("12_vygng")

[node name="Marimba" type="AudioStreamPlayer" parent="Stems"]
stream = ExtResource("13_07nq5")

[node name="Perc" type="AudioStreamPlayer" parent="Stems"]
stream = ExtResource("14_toxfv")

[node name="Snare" type="AudioStreamPlayer" parent="Stems"]
stream = ExtResource("15_qiccn")

[node name="Synth" type="AudioStreamPlayer" parent="Stems"]
stream = ExtResource("16_wpljj")

[connection signal="finished" from="LevelUpPlayer" to="." method="_on_level_up_player_finished"]
